added best betas

--- a/finalized_code/Ridge_reg.ipynb
+++ b/finalized_code/Ridge_reg.ipynb
@@ -2193,17 +2193,17 @@
     }
    ],
    "source": [
-    "clean = pd.read_csv(\"/Users/anab/Documents/MS_UCDavis/STA208/project/STA_208/data/clean.csv\")\n",
-    "from Functions import Cleaning_Functions\n",
-    "fun = Cleaning_Functions()\n",
+    "# clean = pd.read_csv(\"/Users/anab/Documents/MS_UCDavis/STA208/project/STA_208/data/clean.csv\")\n",
+    "# from Functions import Cleaning_Functions\n",
+    "# fun = Cleaning_Functions()\n",
     "\n",
-    "clean  = fun.delete_id_columns(clean) \n",
-    "clean = fun.replace_NAN_with_na(clean)\n",
-    "clean = fun.entry_to_lowercase(clean)\n",
-    "clean = fun.remove_underscores_spaces(clean)\n",
-    "clean = fun.impute_data(clean)\n",
-    "clean = fun.convert_to_categorical(clean)\n",
-    "clean"
+    "# clean  = fun.delete_id_columns(clean) \n",
+    "# clean = fun.replace_NAN_with_na(clean)\n",
+    "# clean = fun.entry_to_lowercase(clean)\n",
+    "# clean = fun.remove_underscores_spaces(clean)\n",
+    "# clean = fun.impute_data(clean)\n",
+    "# clean = fun.convert_to_categorical(clean)\n",
+    "# clean"
    ]
   },
   {
@@ -2447,8 +2447,8 @@
     }
    ],
    "source": [
-    "test1  = clean.drop(\"continent\", axis =1)\n",
-    "test1.head()"
+    "# test1  = clean.drop(\"continent\", axis =1)\n",
+    "# test1.head()"
    ]
   },
   {
@@ -2457,7 +2457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1, predm = fun.drop_response_rows_with_NAs(test1,\"PPI_Likelihood\" ,\"Market_Orientation\") #2\n",
+    "# p1, predm = fun.drop_response_rows_with_NAs(test1,\"PPI_Likelihood\" ,\"Market_Orientation\") #2\n",
     "\n"
    ]
   },
@@ -2467,10 +2467,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1.YEAR =p1.YEAR.astype('category')\n",
-    "p1 = standarize_data(p1)\n",
-    "X_ppi = get_dummyXs_y(p1, \"PPI_Likelihood\")[0]\n",
-    "y_ppi = get_dummyXs_y(p1, \"PPI_Likelihood\")[1]"
+    "# p1.YEAR =p1.YEAR.astype('category')\n",
+    "# p1 = standarize_data(p1)\n",
+    "# X_ppi = get_dummyXs_y(p1, \"PPI_Likelihood\")[0]\n",
+    "# y_ppi = get_dummyXs_y(p1, \"PPI_Likelihood\")[1]"
    ]
   },
   {
@@ -2490,12 +2490,12 @@
     }
    ],
    "source": [
-    "X_train_ppi, X_test_ppi, y_train_ppi, y_test_ppi = train_test_split(X_ppi ,y_ppi, test_size = 0.3, random_state = 2021)\n",
+    "# X_train_ppi, X_test_ppi, y_train_ppi, y_test_ppi = train_test_split(X_ppi ,y_ppi, test_size = 0.3, random_state = 2021)\n",
     "\n",
     "\n",
-    "ppi_ridge_cv=RidgeCV(alphas=np.arange(0.01,2,0.001))\n",
-    "ppi_model_cv=ppi_ridge_cv.fit(X_train_ppi,y_train_ppi)\n",
-    "ppi_model_cv.alpha_"
+    "# ppi_ridge_cv=RidgeCV(alphas=np.arange(0.01,2,0.001))\n",
+    "# ppi_model_cv=ppi_ridge_cv.fit(X_train_ppi,y_train_ppi)\n",
+    "# ppi_model_cv.alpha_"
    ]
   },
   {
@@ -2515,173 +2515,12 @@
     }
    ],
    "source": [
-    "#refit model with alpha =3 and get score\n",
-    "r1 = Ridge(alpha = ppi_model_cv.alpha_)\n",
-    "r1.fit(X_train_ppi,y_train_ppi)\n",
-    "y_pred_ridge_ppi = r1.predict(X_test_ppi)\n",
-    "MSE_ppi = np.mean((y_pred_ridge_ppi-np.array(y_test_ppi))**2)\n",
-    "MSE_ppi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Country_zambia</td>\n",
-       "      <td>1.71073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Country_mali</td>\n",
-       "      <td>1.68728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Country_malawi</td>\n",
-       "      <td>1.14805</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Country_elsalvador</td>\n",
-       "      <td>0.994282</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>crop_name_1_papaya</td>\n",
-       "      <td>0.581091</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>crop_name_1_zucchini</td>\n",
-       "      <td>0.540053</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>HouseholdType_polygamous</td>\n",
-       "      <td>0.482001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>crop_name_1_peas</td>\n",
-       "      <td>0.46471</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>crop_name_1_rambutan</td>\n",
-       "      <td>0.460488</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>crop_name_1_hybiscus</td>\n",
-       "      <td>0.417097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>crop_name_1_chickpeas</td>\n",
-       "      <td>0.387856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>HHsizemembers</td>\n",
-       "      <td>0.351878</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>crop_name_1_yam</td>\n",
-       "      <td>0.311882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Head_EducationLevel_noschool</td>\n",
-       "      <td>0.271985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>crop_name_1_onions</td>\n",
-       "      <td>0.26971</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               0         1\n",
-       "0                 Country_zambia   1.71073\n",
-       "1                   Country_mali   1.68728\n",
-       "2                 Country_malawi   1.14805\n",
-       "3             Country_elsalvador  0.994282\n",
-       "4             crop_name_1_papaya  0.581091\n",
-       "5           crop_name_1_zucchini  0.540053\n",
-       "6       HouseholdType_polygamous  0.482001\n",
-       "7               crop_name_1_peas   0.46471\n",
-       "8           crop_name_1_rambutan  0.460488\n",
-       "9           crop_name_1_hybiscus  0.417097\n",
-       "10         crop_name_1_chickpeas  0.387856\n",
-       "11                 HHsizemembers  0.351878\n",
-       "12               crop_name_1_yam  0.311882\n",
-       "13  Head_EducationLevel_noschool  0.271985\n",
-       "14            crop_name_1_onions   0.26971"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "feature_imp_ppi  = pd.DataFrame([X_train_ppi.columns, r1.coef_]).T\n",
-    "feature_imp_ppi = feature_imp_ppi.sort_values(by = 1,ascending = False).reset_index(drop = True)\n",
-    "feature_imp_ppi.iloc[0:15,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'function' object has no attribute 'toarray'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-162-3db2b6732132>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mr1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'function' object has no attribute 'toarray'"
-     ]
-    }
-   ],
-   "source": [
-    "r1.score.toarray()"
+    "# #refit model with alpha =3 and get score\n",
+    "# r1 = Ridge(alpha = ppi_model_cv.alpha_)\n",
+    "# r1.fit(X_train_ppi,y_train_ppi)\n",
+    "# y_pred_ridge_ppi = r1.predict(X_test_ppi)\n",
+    "# MSE_ppi = np.mean((y_pred_ridge_ppi-np.array(y_test_ppi))**2)\n",
+    "# MSE_ppi"
    ]
   },
   {
