--- a/finalized_code/Ridge_reg.ipynb
+++ b/finalized_code/Ridge_reg.ipynb
@@ -14,12 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### clean clean dataset"
+    "### more dataset cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +48,12 @@
     "clean = fun.remove_underscores_spaces(clean)\n",
     "clean = fun.impute_data(clean)\n",
     "clean = fun.convert_to_categorical(clean)\n",
-    "clean = clean.drop(\"continent\", axis = 1)"
+    "clean = clean.drop(\"continent\", axis = 1) #wont use this, dont need it "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " def drop_response_rows_with_NAs(df,y_variable_current, y_to_delete):\n",
+    "        \"\"\"\n",
+    "        Input: dataframe, response variable column \n",
+    "        Output: dataframe rows with missing response varaibles\n",
+    "        are dropped entirely (we cannot use these to train or test)\n",
+    "        But these dropped rows are saved to be used later\n",
+    "        \n",
+    "        \"\"\"\n",
+    "    \n",
+    "    ## need to delete PPI_threshold since that is like our y2 which we won’t use\n",
+    "        df = df.drop([\"PPI_Threshold\",y_to_delete], axis=1)\n",
+    "        condition = df[y_variable_current]\n",
+    "        rows_to_delete = df[np.isnan(condition)].index\n",
+    "    \n",
+    "    #save all rows with y=NA. Will use this data to predict the y later.\n",
+    "        prediction_dataset = df.iloc[rows_to_delete,:]\n",
+    "    \n",
+    "    #create new data\n",
+    "        new_data = df.drop(labels=rows_to_delete, axis=0)\n",
+    "        new_data = new_data.reset_index(drop=True)\n",
+    "    \n",
+    "        return new_data, prediction_dataset\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b =  drop_response_rows_with_NAs(clean,\"Market_Orientation\", \"PPI_Likelihood\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(       crop_count crop_name_1 crop_harvest_1 crop_intercrop_1  YEAR   Country  \\\n",
+       " 0             2.0   groundnut             na               na  2015  tanzania   \n",
+       " 1             2.0      millet             na               na  2015  tanzania   \n",
+       " 2             2.0   groundnut             na               na  2015  tanzania   \n",
+       " 3             2.0      cowpea             na               na  2015  tanzania   \n",
+       " 4             2.0      sesame             na               na  2015  tanzania   \n",
+       " ...           ...         ...            ...              ...   ...       ...   \n",
+       " 11957         3.0       maize    goodharvest      monoculture  2018     ghana   \n",
+       " 11958         5.0       maize    goodharvest      monoculture  2018     ghana   \n",
+       " 11959         2.0       maize     badharvest        intercrop  2018     ghana   \n",
+       " 11960         2.0       maize     badharvest        intercrop  2018     ghana   \n",
+       " 11961         2.0       maize     badharvest      monoculture  2018     ghana   \n",
+       " \n",
+       "        HHsizemembers  HHsizeMAE HouseholdType Head_EducationLevel  ...  \\\n",
+       " 0                  4       3.32        single             primary  ...   \n",
+       " 1                 10       5.85      together             primary  ...   \n",
+       " 2                  5       4.32      together          illiterate  ...   \n",
+       " 3                 11       9.33      together             primary  ...   \n",
+       " 4                  6       5.41      together           secondary  ...   \n",
+       " ...              ...        ...           ...                 ...  ...   \n",
+       " 11957              8       5.43        couple             primary  ...   \n",
+       " 11958              7       4.78        couple            noschool  ...   \n",
+       " 11959              4       3.20     mansingle            noschool  ...   \n",
+       " 11960              4       3.10        couple            noschool  ...   \n",
+       " 11961             11       8.55        couple            noschool  ...   \n",
+       " \n",
+       "        livestock_prodsales_USD_PPP_pHH_Yr  \\\n",
+       " 0                               38.500640   \n",
+       " 1                                0.000000   \n",
+       " 2                              128.335467   \n",
+       " 3                                0.000000   \n",
+       " 4                              210.892267   \n",
+       " ...                                   ...   \n",
+       " 11957                          655.292919   \n",
+       " 11958                            0.000000   \n",
+       " 11959                           49.859244   \n",
+       " 11960                            0.000000   \n",
+       " 11961                         2849.099647   \n",
+       " \n",
+       "        value_livestock_production_USD_PPP_pHH_Yr  \\\n",
+       " 0                                      38.500640   \n",
+       " 1                                       0.000000   \n",
+       " 2                                     128.335467   \n",
+       " 3                                       0.000000   \n",
+       " 4                                     233.994961   \n",
+       " ...                                          ...   \n",
+       " 11957                                 655.292919   \n",
+       " 11958                                   0.000000   \n",
+       " 11959                                  49.859244   \n",
+       " 11960                                   0.000000   \n",
+       " 11961                                2849.099647   \n",
+       " \n",
+       "        value_livestock_prod_consumed_USD_PPP_pHH_Yr  Market_Orientation  \\\n",
+       " 0                                          0.000000            1.000000   \n",
+       " 1                                          0.000000            1.000000   \n",
+       " 2                                          0.000000            1.000000   \n",
+       " 3                                          0.000000            1.000000   \n",
+       " 4                                         23.102694            0.931377   \n",
+       " ...                                             ...                 ...   \n",
+       " 11957                                      0.000000            1.000000   \n",
+       " 11958                                      0.000000            1.000000   \n",
+       " 11959                                      0.000000            0.456522   \n",
+       " 11960                                      0.000000            1.000000   \n",
+       " 11961                                      0.000000            1.000000   \n",
+       " \n",
+       "       Livestock_Orientation  Food_Availability_kCal_MAE_day  \\\n",
+       " 0                  0.049505                     3650.565755   \n",
+       " 1                  0.000000                     3632.448997   \n",
+       " 2                  0.129870                     5314.779021   \n",
+       " 3                  0.310907                      257.234727   \n",
+       " 4                  0.695041                      925.310354   \n",
+       " ...                     ...                             ...   \n",
+       " 11957              0.779661                     1615.869392   \n",
+       " 11958              0.310907                      355.648536   \n",
+       " 11959              0.456522                      379.050204   \n",
+       " 11960              0.310907                      693.504198   \n",
+       " 11961              1.000000                     2766.448327   \n",
+       " \n",
+       "        Food_Self_Sufficiency_kCal_MAE_day  NrofMonthsWildFoodCons  \\\n",
+       " 0                                0.000000                       0   \n",
+       " 1                                0.000000                       4   \n",
+       " 2                             1750.000000                       1   \n",
+       " 3                              257.234727                       0   \n",
+       " 4                               22.070240                       0   \n",
+       " ...                                   ...                     ...   \n",
+       " 11957                          339.743848                       7   \n",
+       " 11958                          355.648536                       5   \n",
+       " 11959                          276.284247                       0   \n",
+       " 11960                          693.504198                       0   \n",
+       " 11961                          568.613314                       0   \n",
+       " \n",
+       "        Gender_MaleControl  Gender_FemaleControl  \n",
+       " 0                0.000000              1.000000  \n",
+       " 1                0.499999              0.500001  \n",
+       " 2                1.000000              0.000000  \n",
+       " 3                0.999984              0.000016  \n",
+       " 4                1.000000              0.000000  \n",
+       " ...                   ...                   ...  \n",
+       " 11957            0.629176              0.370824  \n",
+       " 11958            1.000000              0.000000  \n",
+       " 11959            0.000000              1.000000  \n",
+       " 11960            1.000000              0.000000  \n",
+       " 11961            1.000000              0.000000  \n",
+       " \n",
+       " [11962 rows x 39 columns],\n",
+       " Empty DataFrame\n",
+       " Columns: [crop_count, crop_name_1, crop_harvest_1, crop_intercrop_1, YEAR, Country, HHsizemembers, HHsizeMAE, HouseholdType, Head_EducationLevel, LandOwned, LandCultivated, LivestockHoldings, NrofMonthsFoodInsecure, HFIAS_status, score_HDDS_GoodSeason, score_HDDS_farmbasedGoodSeason, score_HDDS_purchasedGoodSeason, score_HDDS_BadSeason, score_HDDS_farmbasedBadSeason, score_HDDS_purchasedBadSeason, TVA_USD_PPP_pmae_pday, total_income_USD_PPP_pHH_Yr, offfarm_income_USD_PPP_pHH_Yr, farm_income_USD_PPP_pHH_Yr, value_farm_produce_USD_PPP_pHH_Yr, crop_sales_USD_PPP_pHH_Yr, value_crop_produce_USD_PPP_pHH_Yr, value_crop_consumed_USD_PPP_pHH_Yr, livestock_prodsales_USD_PPP_pHH_Yr, value_livestock_production_USD_PPP_pHH_Yr, value_livestock_prod_consumed_USD_PPP_pHH_Yr, Market_Orientation, Livestock_Orientation, Food_Availability_kCal_MAE_day, Food_Self_Sufficiency_kCal_MAE_day, NrofMonthsWildFoodCons, Gender_MaleControl, Gender_FemaleControl]\n",
+       " Index: []\n",
+       " \n",
+       " [0 rows x 39 columns])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop_response_rows_with_NAs(clean,\"Market_Orientation\", \"PPI_Likelihood\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,10 +344,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>crop_count</th>\n",
+       "      <th>crop_name_1</th>\n",
+       "      <th>crop_harvest_1</th>\n",
+       "      <th>crop_intercrop_1</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>HHsizemembers</th>\n",
+       "      <th>HHsizeMAE</th>\n",
+       "      <th>HouseholdType</th>\n",
+       "      <th>Head_EducationLevel</th>\n",
+       "      <th>...</th>\n",
+       "      <th>livestock_prodsales_USD_PPP_pHH_Yr</th>\n",
+       "      <th>value_livestock_production_USD_PPP_pHH_Yr</th>\n",
+       "      <th>value_livestock_prod_consumed_USD_PPP_pHH_Yr</th>\n",
+       "      <th>Market_Orientation</th>\n",
+       "      <th>Livestock_Orientation</th>\n",
+       "      <th>Food_Availability_kCal_MAE_day</th>\n",
+       "      <th>Food_Self_Sufficiency_kCal_MAE_day</th>\n",
+       "      <th>NrofMonthsWildFoodCons</th>\n",
+       "      <th>Gender_MaleControl</th>\n",
+       "      <th>Gender_FemaleControl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [crop_count, crop_name_1, crop_harvest_1, crop_intercrop_1, YEAR, Country, HHsizemembers, HHsizeMAE, HouseholdType, Head_EducationLevel, LandOwned, LandCultivated, LivestockHoldings, NrofMonthsFoodInsecure, HFIAS_status, score_HDDS_GoodSeason, score_HDDS_farmbasedGoodSeason, score_HDDS_purchasedGoodSeason, score_HDDS_BadSeason, score_HDDS_farmbasedBadSeason, score_HDDS_purchasedBadSeason, TVA_USD_PPP_pmae_pday, total_income_USD_PPP_pHH_Yr, offfarm_income_USD_PPP_pHH_Yr, farm_income_USD_PPP_pHH_Yr, value_farm_produce_USD_PPP_pHH_Yr, crop_sales_USD_PPP_pHH_Yr, value_crop_produce_USD_PPP_pHH_Yr, value_crop_consumed_USD_PPP_pHH_Yr, livestock_prodsales_USD_PPP_pHH_Yr, value_livestock_production_USD_PPP_pHH_Yr, value_livestock_prod_consumed_USD_PPP_pHH_Yr, Market_Orientation, Livestock_Orientation, Food_Availability_kCal_MAE_day, Food_Self_Sufficiency_kCal_MAE_day, NrofMonthsWildFoodCons, Gender_MaleControl, Gender_FemaleControl]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_market"
+   ]
   },
   {
    "cell_type": "markdown",
