Working on OLS for figures
Work in Progress

--- a/more_data_cleaning.ipynb
+++ b/more_data_cleaning.ipynb
@@ -1295,7 +1295,11 @@
    "outputs": [],
    "source": [
     "# categ_crop_data = pd.DataFrame(semi_clean_crop.select_dtypes(include=['object']))\n",
-    "# categ_crop_data = entry_to_lowercase(categ_crop_data)"
+    "# categ_crop_data = entry_to_lowercase(categ_crop_data)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#check the crop frequencies to make sure that crop names is cleaned correctly\n"
    ]
   },
   {
