Linear model correction
updating linear model

--- a/finalized_code/LinearModels.ipynb
+++ b/finalized_code/LinearModels.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.202\n",
       "Method:                 Least Squares   F-statistic:                              65.70\n",
       "Date:                Tue, 08 Jun 2021   Prob (F-statistic):                   2.24e-305\n",
-      "Time:                        17:12:36   Log-Likelihood:                         -8685.1\n",
+      "Time:                        17:19:42   Log-Likelihood:                         -8685.1\n",
       "No. Observations:                6645   AIC:                                  1.742e+04\n",
       "Df Residuals:                    6619   BIC:                                  1.760e+04\n",
       "Df Model:                          26                                                  \n",
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.341\n",
       "Method:                 Least Squares   F-statistic:                     26.85\n",
       "Date:                Tue, 08 Jun 2021   Prob (F-statistic):               0.00\n",
-      "Time:                        17:12:37   Log-Likelihood:                -7981.4\n",
+      "Time:                        17:19:46   Log-Likelihood:                -7981.4\n",
       "No. Observations:                6645   AIC:                         1.623e+04\n",
       "Df Residuals:                    6511   BIC:                         1.714e+04\n",
       "Df Model:                         133                                         \n",
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1276,12 +1276,13 @@
        "9           score_HDDS_GoodSeason   0.0212405"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#this is market orientation\n",
     "betas_ppi = reg.coef_\n",
     "max5_index_ppi = [list(abs(betas_ppi)).index(x) for x in np.sort(abs(betas_ppi))[::-1][:20]]\n",
     "min5_index_ppi = [list(abs(betas_ppi)).index(x) for x in np.sort(abs(betas_ppi))[:10]]\n",
@@ -1292,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1397,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.089\n",
       "Method:                 Least Squares   F-statistic:                     28.58\n",
       "Date:                Tue, 08 Jun 2021   Prob (F-statistic):          1.00e-127\n",
-      "Time:                        17:06:53   Log-Likelihood:                -33610.\n",
+      "Time:                        17:25:34   Log-Likelihood:                -33610.\n",
       "No. Observations:                7054   AIC:                         6.727e+04\n",
       "Df Residuals:                    7028   BIC:                         6.745e+04\n",
       "Df Model:                          25                                         \n",
@@ -1460,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1508,7 +1509,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.542\n",
       "Method:                 Least Squares   F-statistic:                     66.77\n",
       "Date:                Tue, 08 Jun 2021   Prob (F-statistic):               0.00\n",
-      "Time:                        17:07:41   Log-Likelihood:                -31132.\n",
+      "Time:                        17:25:34   Log-Likelihood:                -31132.\n",
       "No. Observations:                7054   AIC:                         6.252e+04\n",
       "Df Residuals:                    6926   BIC:                         6.340e+04\n",
       "Df Model:                         127                                         \n",
@@ -1691,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1745,20 +1746,50 @@
        "      <td>crop_name_1_rambutan</td>\n",
        "      <td>-6.03961e-14</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>crop_name_1_avocado</td>\n",
+       "      <td>2.66454e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Food_Self_Sufficiency_kCal_MAE_day</td>\n",
+       "      <td>-8.3654e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Food_Availability_kCal_MAE_day</td>\n",
+       "      <td>2.78319e-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>value_livestock_production_USD_PPP_pHH_Yr</td>\n",
+       "      <td>1.40715e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>total_income_USD_PPP_pHH_Yr</td>\n",
+       "      <td>1.56868e-05</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       0            1\n",
-       "0  crop_name_1_chickpeas  3.55271e-15\n",
-       "1       crop_name_1_geso -7.10543e-15\n",
-       "2    crop_name_1_flowers  2.13163e-14\n",
-       "3     crop_name_1_ognons -5.24025e-14\n",
-       "4   crop_name_1_rambutan -6.03961e-14"
+       "                                           0            1\n",
+       "0                      crop_name_1_chickpeas  3.55271e-15\n",
+       "1                           crop_name_1_geso -7.10543e-15\n",
+       "2                        crop_name_1_flowers  2.13163e-14\n",
+       "3                         crop_name_1_ognons -5.24025e-14\n",
+       "4                       crop_name_1_rambutan -6.03961e-14\n",
+       "5                        crop_name_1_avocado  2.66454e-13\n",
+       "6         Food_Self_Sufficiency_kCal_MAE_day  -8.3654e-07\n",
+       "7             Food_Availability_kCal_MAE_day  2.78319e-06\n",
+       "8  value_livestock_production_USD_PPP_pHH_Yr  1.40715e-05\n",
+       "9                total_income_USD_PPP_pHH_Yr  1.56868e-05"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,11 +1797,25 @@
    "source": [
     "betas_ppi = reg.coef_\n",
     "max5_index_ppi = [list(abs(betas_ppi)).index(x) for x in np.sort(abs(betas_ppi))[::-1][:20]]\n",
-    "min5_index_ppi = [list(abs(betas_ppi)).index(x) for x in np.sort(abs(betas_ppi))[:5]]\n",
+    "min5_index_ppi = [list(abs(betas_ppi)).index(x) for x in np.sort(abs(betas_ppi))[:10]]\n",
     "betas_mo[min5_index_ppi]\n",
     "Xtrain.columns[min5_index_ppi]\n",
     "pd.DataFrame([Xtrain.columns[min5_index_ppi], betas_ppi[min5_index_ppi]]).T"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1789,7 +1834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
