--- a/finalized_code/Ridge_reg.ipynb
+++ b/finalized_code/Ridge_reg.ipynb
@@ -32,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#written by Christina\n",
     "def standarize_data(df):\n",
     "    \"\"\"\n",
     "    Input: a dataset\n",
