--- a/finalized_code/Ridge_reg.ipynb
+++ b/finalized_code/Ridge_reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "[5 rows x 46 columns]"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "(9493, 38)"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "456"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,13 +417,13 @@
    "source": [
     "alpha_set = np.arange(150,570,2)\n",
     "ridge_cv=RidgeCV(alphas=alpha_set, store_cv_values = True, fit_intercept = False)\n",
-    "model_cv=ridge_cv.fit(X_train,y_train)\n",
+    "model_cv=ridge_cv.fit(X_train_mo,y_train_mo)\n",
     "model_cv.alpha_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,16 +441,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa79a877d90>"
+       "<matplotlib.legend.Legend at 0x7f84897ac8d0>"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2088,7 +2088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
