addd beta interpretations

--- a/finalized_code/Ridge_reg.ipynb
+++ b/finalized_code/Ridge_reg.ipynb
@@ -2025,13 +2025,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Model $Y=\\beta_1*X_C+\\beta2*X_Z+\\beta3*X_size$\n",
+    "\n",
+    "Whem the country is cambodia, then we have $X_C = 1, X_Z=0$, the model is $Y_C=\\beta_1+\\beta_3*X_size$\n",
+    "\n",
+    "Whem the country is zimbawe, then we have $X_Z = 1, X_C=0$, the model is $Y_noC=\\beta_2+\\beta_3*X_size$\n",
+    "\n",
+    "take the difference: $Y_C-Y_noC = \\beta_1-\\beta_2$\n",
+    "\n",
+    "if b1 =3 , b2 = 5 ppi would decrease by 2 units,  comparing ppi of  C to  Z, the avg ppi decreases by 2 units, holding all other variables constant. "
+   ]
   },
   {
    "cell_type": "code",
